# rpg_svo

rqt_svo1/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_svo1/resource/: widget.ui
rqt_svo1/scripts/: rqt_svo1
rqt_svo1/src/rqt_svo1/: svo1.py  svo1_widget.py
svo/: CMakeLists.txt
svo/include/svo/: frame.h  global.h  initialization.h  sparse_img_align.h
svo/src/: depth_filter.cpp  frame_handler_mono.cpp  initialization.cpp  matcher.cpp  point.cpp  pose_optimizer.cpp  sparse_img_align.cpp
svo1/: CMakeLists.txt  Doxyfile  package.xml
svo1/include/svo1/: bundle_adjustment.h  config.h  depth_filter.h  feature.h  feature_alignment.h  feature_detection.h  frame.h  frame_handler_base.h  frame_handler_mono.h  global.h  initialization.h  map.h  matcher.h  point.h  pose_optimizer.h  reprojector.h  sparse_img_align.h
svo1/src/: bundle_adjustment.cpp  config.cpp  depth_filter.cpp  feature_alignment.cpp  feature_detection.cpp  frame.cpp  frame_handler_base.cpp  frame_handler_mono.cpp  initialization.cpp  map.cpp  matcher.cpp  point.cpp  pose_optimizer.cpp  reprojector.cpp  sparse_img_align.cpp
svo1/test/: test_depth_filter.cpp  test_feature_alignment.cpp  test_feature_detection.cpp  test_matcher.cpp  test_pipeline.cpp  test_pose_optimizer.cpp  test_sparse_img_align.cpp  test_utils.h
svo1_analysis/: CMakeLists.txt  package.xml  setup.py
svo1_analysis/comparisons/: speed.yaml  textures.yaml
svo1_analysis/scripts/: benchmark.py  compare_results.py  comparison.py  evaluate.py
svo1_analysis/src/svo1_analysis/: analyse_trajectory.py  hand_eye_calib.py
svo1_msgs/: CMakeLists.txt  package.xml
svo1_ros/: CMakeLists.txt  package.xml  rqt.perspective  rviz_config.rviz
svo1_ros/include/svo1_ros/: visualizer.h
svo1_ros/launch/: live.launch  test_rig3.launch  webcam.launch
svo1_ros/src/: benchmark_node.cpp  visualizer.cpp  vo_node.cpp
svo_ros/src/: visualizer.cpp
